--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,9 +1,5 @@
-$mainBlue: #2f5572;
-
-body {
-  color: peru;
-
-  h1 {
-    color: $mainBlue;
-  }
-}
+@import "normalize.css";
+@import "base/_variables.css";
+@import "base/_global.css";
+@import "modules/_large-hero.css";
+@import "modules/_btn.css";
