--- a/app/assets/styles/modules/_col.css
+++ b/app/assets/styles/modules/_col.css
@@ -11,4 +11,14 @@
       min-width: 37% !important;
     }
   }
+
+  &__b-margin-until-medium {
+    margin-bottom: 1rem;
+  }
+
+  @mixin atMedium {
+    &__b-margin-until-medium {
+      margin-bottom: 0;
+    }
+  }
 }
