--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -10,3 +10,4 @@
 @import "modules/_headline.css";
 @import "modules/_row.css";
 @import "modules/_col.css";
+@import "modules/_generic-content-container.css";
