--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,12 +1,29 @@
 .page-section {
   padding: 1.2rem 0;
 
+  @mixin atMedium {
+    padding: 4.5rem 0;
+  }
+
   &--blue {
     background-color: $primary;
     color: #fff;
   }
 
-  @mixin atMedium {
-    padding: 4.5rem 0;
+  &--no-b-padding-at-small {
+    padding-bottom: 0;
+
+    @mixin atMedium {
+      padding-bottom: 4.5rem;
+    }
+  }
+
+  &--testimonials {
+    background-color: #e0e6ef;
+    @mixin atMedium {
+      background: url("assets/images/testimonials-bg.jpg");
+      background-size: cover;
+      background-position: center;
+    }
   }
 }
