--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -16,14 +16,18 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.6rem;
-  }
 
-  @mixin atSmall {
-    &__icon {
+    @mixin atSmall {
       display: inline-block;
       margin-right: 0.5rem;
       margin-left: 0;
       margin-bottom: 0;
+      position: relative;
+      top: 8px;
     }
+  }
+
+  &--blue {
+    color: $primary;
   }
 }
