--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,5 +11,6 @@
 @import "modules/_row.css";
 @import "modules/_col.css";
 @import "modules/_section-title.css";
+@import "modules/_testimonial.css";
 @import "modules/_feature-item.css";
 @import "modules/_generic-content-container.css";
