--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -4,7 +4,7 @@
   margin-bottom: 98px;
   padding: 0 18px 1px 18px;
 
-  @mixin atMedium {
+  @mixin atLarge {
     margin-bottom: 0;
     padding: 0 1.8125rem 1px 1.8125rem;
   }
