--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,4 +13,5 @@
 @import "modules/_section-title.css";
 @import "modules/_testimonial.css";
 @import "modules/_feature-item.css";
+@import "modules/_site-footer.css";
 @import "modules/_generic-content-container.css";
